@@ -43,10 +43,6 @@ case "${1}" in
          /etc/rc.d/init.d/halt stop
       fi
 
-      # Udev handles uevents itself, so we don't need to have
-      # the kernel call out to any binary in response to them
-      echo > /proc/sys/kernel/hotplug
-
       # Start the udev daemon to continually watch for, and act on,
       # uevents
       /sbin/udevd --daemon
