@@ -1,3 +1,6 @@
+2014-07-06 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Remove obsolete reference to /proc/sys/kernel/hotplug in udev boot script
+
 2014-07-02 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Remove obsolete check for /proc/ksyms in modules boot script
 
